...
            name="smobDataItem"
            type="com.tanfra.shopmob.smob.data.repo.ato.SmobItemATO" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSmobItemDetails"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/vertical_margin_huge"
        android:layout_height="wrap_content"
        >

        <TextView
...
            android:layout_width="0dp"
            android:layout_height="@dimen/image_header_height"
            android:layout_marginTop="@dimen/vertical_margin_image"
            android:layout_marginBottom="@dimen/vertical_margin_image"
            android:layout_marginStart="@dimen/horizontal_margin_small"
            android:layout_marginEnd="@dimen/horizontal_margin_small"
            android:contentDescription="@string/map"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="@id/tvHeading"
            app:layout_constraintBottom_toTopOf="@+id/clTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
...
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin_small"
                android:layout_marginEnd="@dimen/horizontal_margin_small"
                android:text="@string/title"
                android:textSize="@dimen/label_text_size"
                app:layout_constraintBaseline_toBaselineOf="@id/tvAnchorTitle"
                app:layout_constraintEnd_toStartOf="@+id/tvAnchorTitle"
                app:layout_constraintHorizontal_weight="0.2"
                tools:labelFor="@id/tvTitleText" />

...
            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin_small"
                android:layout_marginEnd="@dimen/horizontal_margin_small"
                android:text="@string/description"
                android:textSize="@dimen/label_text_size"
                app:layout_constraintBaseline_toBaselineOf="@id/tvAnchorDesc"
                app:layout_constraintEnd_toStartOf="@+id/tvAnchorDesc"
                app:layout_constraintHorizontal_weight="0.2"
                tools:labelFor="@id/tvTitleText" />

...
        <!-- row: Location -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/clDescription"
            app:layout_constraintBottom_toTopOf="@+id/btDismiss"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <!-- invisible TV for alignment of label and edit text field -->
            <TextView
...
            <TextView
                android:id="@+id/tvLoc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin_small"
                android:layout_marginEnd="@dimen/horizontal_margin_small"
                android:text="@string/location"
                android:textSize="@dimen/label_text_size"
                app:layout_constraintBaseline_toBaselineOf="@id/tvAnchorLoc"
                app:layout_constraintEnd_toStartOf="@+id/tvAnchorLoc"
                app:layout_constraintHorizontal_weight="0.2"
                tools:labelFor="@id/tvTitleText" />

            <TextView
                android:id="@+id/tvLocText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin_small"
                android:layout_marginEnd="@dimen/horizontal_margin_huge"
                android:text="@{smobDataItem.location}"
                android:textSize="@dimen/label_text_size"
...
