...
        android:id="@+id/clSaveSmobItemFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <EditText
            android:id="@+id/smobItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/smob_item_title"
            android:autofillHints="@string/smob_item_title"
            android:inputType="textCapSentences|textAutoCorrect"
            android:text="@={viewModel.smobItemTitle}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <EditText
            android:id="@+id/smobItemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/smob_item_desc"
            android:autofillHints="@string/smob_item_desc"
            android:inputType="textCapSentences|textAutoCorrect"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/smobItemTitle"
            />

        <TextView
            android:id="@+id/selectLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
...
            app:drawableLeftCompat="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/smobItemDescription"
            />

        <TextView
            android:id="@+id/selectedLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@{viewModel.smobItemSelectedLocationStr}"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/selectLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/selectLocation"
            tools:text="Location" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveSmobItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:fadeVisible="@{!viewModel.showLoading.booleanValue()}"
            android:src="@drawable/ic_save"
            app:fabSize="normal"
...
