...
        <variable
            name="viewModel"
            type="com.tanfra.shopmob.smob.activities.planning.saveitem.SaveSmobItemViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSelectLocationFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- map container
             could switch to cloud basded styling by adding:
             map:mapId="@string/cloud_styling_basic_map_id"
...
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            />

        <!-- ask for the name of the location -->
        <EditText
            android:id="@+id/etLocationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="@string/location_name"
            android:selectAllOnFocus="true"
            android:hint="@string/location_name"
            android:inputType="textCapSentences|textAutoCorrect"
            android:text="@={viewModel.smobItemSelectedLocationStr}"
            android:imeOptions="actionDone"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnOk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btnOk"
            android:layout_width="100dp"
...
